# bw-ssh-agent

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.sh
assets/: Info.plist  entitlements.plist  launchd.plist
docs/: entitlements-guide.md
src/: constants.rs  database.rs  handler.rs  keychain.rs  main.rs  utils.rs
src/agent/: agent.rs  handler.rs  mod.rs  protocol.rs
src/bitwarden/: auth.rs  config.rs  constants.rs  crypto.rs  mod.rs  sync.rs
src/bitwarden/auth/: identity.rs  identity_dto.rs  mod.rs  prelogin.rs  token.rs
src/cmd/: daemon.rs  daemon_register.rs  daemon_run.rs  list.rs  login.rs  mod.rs  sync.rs  utils.rs
src/migrations/: v1.sql  v2.sql  v3.sql
